[MD User Menu] Adjusted the size and position of avatar button icon

1. Adjusted the size of the error icon in the avatar button to be 16
2. On mac, moved the icon from the RHS to LHS

BUG=636037

Review-Url: https://codereview.chromium.org/2237023002
Cr-Commit-Position: refs/heads/master@{#411688}

Former-commit-id: 19be3524dfeed25a8ef1e65fdd380f7a6ed1914f